--- a/.github/workflows/DockerBuildAndPush.yaml
+++ b/.github/workflows/DockerBuildAndPush.yaml
@@ -36,7 +36,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: registry.uniproject.jp
-          username: yuito-it
+          username: robot$github-publisher
           password: ${{ secrets.HARBOR_TOKEN }}
 
       - name: Build Docker image
