--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "api": "node api/server.js"
   },
   "dependencies": {
+    "discord.js": "^14.22.1",
     "express": "^4.18.2",
     "next": "^14.0.0",
     "react": "^18.2.0",
